--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.0.0"
   },
   "dependencies": {
+    "@eslint/js": "^8.36.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint-config-prettier": "^8.8.0",
@@ -46,10 +47,13 @@
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^46.0.0",
+    "eslint-plugin-vue": "^9.9.0",
     "eslint-plugin-yml": "^1.5.0",
     "globals": "^13.20.0",
     "jsonc-eslint-parser": "^2.2.0",
+    "local-pkg": "^0.4.3",
     "prettier": "^2.8.6",
+    "vue-eslint-parser": "^9.1.0",
     "yaml-eslint-parser": "^1.2.0"
   },
   "devDependencies": {
