chore: add dist-tag

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "import": "./index.js"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "tag": "beta"
   },
   "scripts": {
     "lint": "eslint .",
