feat: disallow default export

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,9 @@
     "lib": ["es2019"],
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "skipLibCheck": true,
     "noUnusedLocals": true,
-    "resolveJsonModule": true,
     "types": ["node"],
     "allowJs": true,
     "declaration": true,
