--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/node": "^20.5.7",
     "bumpp": "^9.2.0",
     "eslint": "^8.48.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
