--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-define-config": "^1.23.0",
     "eslint-plugin-antfu": "^0.42.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-prettier": "^5.0.0",
