--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "url": "git+https://github.com/sxzz/eslint-config.git"
   },
   "files": [
-    "index.cjs",
-    "index.js",
-    "src"
+    "dist"
   ],
-  "main": "./index.js",
-  "module": "./index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "require": "./index.cjs",
-    "import": "./index.js"
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js"
   },
   "publishConfig": {
     "access": "public"
@@ -38,7 +37,6 @@
     "eslint": "^8.0.0"
   },
   "dependencies": {
-    "@eslint/js": "^8.49.0",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@unocss/eslint-plugin": "^0.55.7",
@@ -66,6 +64,7 @@
     "@types/node": "^20.6.3",
     "bumpp": "^9.2.0",
     "eslint": "^8.49.0",
+    "sucrase": "^3.34.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
