--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^20.6.3",
     "bumpp": "^9.2.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-sort-keys": "^2.3.5",
     "sucrase": "^3.34.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
