--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@frabbit/eslint-config",
   "version": "3.6.1",
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "npm@9.6.7",
   "description": "ESLint config for @frabbit.",
   "type": "module",
   "license": "MIT",
@@ -37,9 +37,9 @@
     "eslint": "^8.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@unocss/eslint-plugin": "^0.56.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@unocss/eslint-plugin": "^0.56.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^1.23.0",
     "eslint-plugin-antfu": "^0.43.1",
@@ -51,25 +51,25 @@
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sonarjs": "^0.21.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-yml": "^1.9.0",
     "globals": "^13.22.0",
     "jsonc-eslint-parser": "^2.3.0",
-    "local-pkg": "^0.4.3",
+    "local-pkg": "^0.5.0",
     "prettier": "^3.0.3",
     "vue-eslint-parser": "^9.3.1",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "@frabbit/prettier-config": "^2.0.0",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.8.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.50.0",
     "eslint-plugin-sort-keys": "^2.3.5",
     "sucrase": "^3.34.0",
     "tsup": "^7.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=16.14.0"
