fix(ci): fix release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,7 +5,7 @@
       {
         "preset": "conventionalcommits",
         "releaseRules": [
-          { "type": "feat", "release": "patch" },
+          { "type": "feat", "release": "minor" },
           { "type": "fix", "release": "patch" },
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "minor" },
