--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
-    "eslint": "^8.0.0"
+    "eslint": "^8.56.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
     "@unocss/eslint-plugin": "^0.58.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^1.24.1",
@@ -58,6 +56,7 @@
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "prettier": "^3.2.5",
+    "typescript-eslint": "^7.0.1",
     "vue-eslint-parser": "^9.4.2",
     "yaml-eslint-parser": "^1.2.2"
   },
@@ -71,7 +70,7 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=16.14.0"
+    "node": "^18.18.0 || >=20.0.0"
   },
   "prettier": "@sxzz/prettier-config"
 }
