--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-i": "^2.29.1",
     "eslint-plugin-jsonc": "^2.13.0",
     "eslint-plugin-markdown": "^3.0.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-sort-keys": "^2.3.5",
     "eslint-plugin-unicorn": "^51.0.1",
