--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "eslint-plugin-jsonc": "^2.13.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-sort-keys": "^2.3.5",
     "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "eslint-plugin-vue": "^9.21.1",
