--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-define-config": "^1.24.1",
     "eslint-plugin-antfu": "^2.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-i": "^2.29.1",
+    "eslint-plugin-import-x": "^0.5.0",
     "eslint-plugin-jsonc": "^2.13.0",
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-n": "^16.6.2",
