--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "@types/node": "^20.12.7",
     "bumpp": "^9.4.1",
     "eslint": "^9.1.1",
-    "sucrase": "^3.35.0",
     "tsup": "^8.0.2",
+    "tsx": "^4.8.2",
     "typescript": "^5.4.5"
   },
   "engines": {
