--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^1.24.1",
     "eslint-plugin-antfu": "^2.1.2",
+    "eslint-plugin-command": "^0.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^0.5.0",
     "eslint-plugin-jsonc": "^2.15.1",
