--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "dependencies": {
     "@unocss/eslint-plugin": "^0.60.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-define-config": "^2.1.0",
     "eslint-plugin-antfu": "^2.3.3",
     "eslint-plugin-command": "^0.2.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -62,6 +61,7 @@
   },
   "devDependencies": {
     "@sxzz/prettier-config": "^2.0.2",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.2",
     "bumpp": "^9.4.1",
     "eslint": "^9.4.0",
