chore: use eslint-ts-patch instead

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.formatOnSave": true,
   "exportall.config.folderListener": ["/src", "/src/configs"],
-  "exportall.config.semis": false
+  "exportall.config.semis": false,
+  "eslint.runtime": null
 }
