--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.11",
     "bumpp": "^9.4.1",
-    "eslint": "^9.7.0",
+    "eslint": "npm:eslint-ts-patch@9.5.0-0",
+    "eslint-ts-patch": "9.5.0-0",
     "tsup": "^8.2.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
