--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-perfectionist": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-unicorn": "^54.0.0",
     "eslint-plugin-unused-imports": "^4.0.1",
     "eslint-plugin-vue": "^9.27.0",
