--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.56.0 || ^9.0.0"
   },
   "dependencies": {
+    "@eslint/js": "^9.9.0",
     "@unocss/eslint-plugin": "^0.61.9",
     "eslint-config-flat-gitignore": "^0.1.8",
     "eslint-config-prettier": "^9.1.0",
