chore: use built-in TS support

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "pnpm run build:typegen && tsup",
     "build:typegen": "tsx scripts/typegen.ts",
     "build:inspector": "eslint-config-inspector build --config eslint-inspector.config.ts",
-    "lint": "eslint .",
+    "lint": "eslint --flag unstable_ts_config .",
     "lint:fix": "pnpm run lint --fix",
     "release": "bumpp && pnpm publish",
     "typecheck": "tsc --noEmit",
@@ -72,7 +72,7 @@
     "@types/eslint": "^9.6.0",
     "@types/node": "^20.14.14",
     "bumpp": "^9.4.2",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.0",
     "eslint-typegen": "^0.3.0",
     "importx": "^0.4.3",
     "picocolors": "^1.0.1",
