--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
-    "eslint": "^8.56.0 || ^9.0.0"
+    "eslint": "^9.5.0"
   },
   "dependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/eslint": "^9.6.0",
-    "@unocss/eslint-plugin": "^0.62.2",
-    "eslint-config-flat-gitignore": "^0.1.8",
+    "@types/eslint": "^9.6.1",
+    "@unocss/eslint-plugin": "^0.62.3",
+    "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-antfu": "^2.3.6",
     "eslint-plugin-command": "^0.2.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^3.1.0",
+    "eslint-plugin-import-x": "^4.1.1",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-n": "^17.10.2",
-    "eslint-plugin-perfectionist": "^3.2.0",
+    "eslint-plugin-perfectionist": "^3.3.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-unicorn": "^55.0.0",
@@ -66,21 +66,21 @@
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^8.2.0",
+    "typescript-eslint": "^8.3.0",
     "vue-eslint-parser": "^9.4.3",
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
     "@eslint/config-inspector": "^0.5.4",
     "@sxzz/prettier-config": "^2.0.2",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.1",
     "bumpp": "^9.5.2",
     "eslint": "^9.9.1",
     "eslint-typegen": "^0.3.1",
     "importx": "^0.4.3",
     "picocolors": "^1.0.1",
     "tsup": "^8.2.4",
-    "tsx": "^4.17.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "engines": {
