--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.9.1",
+    "@eslint/markdown": "^6.0.0",
     "@types/eslint": "^9.6.1",
     "@unocss/eslint-plugin": "^0.62.3",
     "eslint-config-flat-gitignore": "^0.3.0",
@@ -53,7 +54,6 @@
     "eslint-plugin-import-x": "^4.1.1",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.3.0",
     "eslint-plugin-prettier": "^5.2.1",
