--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-perfectionist": "^3.5.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-sxzz": "^0.1.0",
     "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-unused-imports": "^4.1.3",
     "eslint-plugin-vue": "^9.28.0",
