--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^9.5.0"
   },
   "dependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
     "@eslint/js": "^9.11.1",
     "@eslint/markdown": "^6.1.1",
     "@unocss/eslint-plugin": "^0.63.1",
@@ -49,7 +50,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-antfu": "^2.7.0",
     "eslint-plugin-command": "^0.2.6",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^4.3.1",
     "eslint-plugin-jsdoc": "^50.3.0",
     "eslint-plugin-jsonc": "^2.16.0",
