chore: upgrade deps

--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/js": "^9.14.0",
     "@eslint/markdown": "^6.2.1",
-    "@unocss/eslint-plugin": "^0.64.0",
+    "@unocss/eslint-plugin": ">=0.64.0",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-antfu": "^2.7.0",
     "eslint-plugin-command": "^0.2.6",
     "eslint-plugin-import-x": "^4.4.0",
     "eslint-plugin-jsdoc": "^50.4.3",
-    "eslint-plugin-jsonc": "^2.18.0",
+    "eslint-plugin-jsonc": "^2.18.1",
     "eslint-plugin-n": "^17.13.1",
     "eslint-plugin-perfectionist": "^3.9.1",
     "eslint-plugin-prettier": "^5.2.1",
