chore: upgrade major deps

--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/js": "^9.18.0",
     "@eslint/markdown": "^6.2.1",
-    "@unocss/eslint-plugin": ">=0.65.4",
-    "eslint-config-flat-gitignore": "^0.3.0",
+    "@unocss/eslint-plugin": "^65.4.0",
+    "eslint-config-flat-gitignore": "^1.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-antfu": "^2.7.0",
-    "eslint-plugin-command": "^0.2.7",
+    "eslint-plugin-command": "^2.1.0",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-jsonc": "^2.18.2",
@@ -64,7 +64,7 @@
     "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^0.5.1",
+    "local-pkg": "^1.0.0",
     "prettier": "^3.4.2",
     "typescript-eslint": "^8.19.1",
     "vue-eslint-parser": "^9.4.3",
@@ -76,7 +76,7 @@
     "@types/node": "^22.10.5",
     "bumpp": "^9.10.0",
     "eslint": "^9.18.0",
-    "eslint-typegen": "^0.3.2",
+    "eslint-typegen": "^1.0.0",
     "importx": "^0.5.1",
     "picocolors": "^1.1.1",
     "tsup": "^8.3.5",
