--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sxzz/eslint-config",
-  "version": "5.0.0-beta.2",
+  "version": "5.0.0",
   "packageManager": "pnpm@9.15.4",
   "description": "ESLint config for @sxzz.",
   "type": "module",
