feat: add de-morgan plugin

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-antfu": "^3.0.0",
     "eslint-plugin-command": "^3.0.0",
+    "eslint-plugin-de-morgan": "^1.0.0",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-jsonc": "^2.19.1",
@@ -82,7 +83,7 @@
     "@types/node": "^22.13.1",
     "@unocss/eslint-plugin": "^65.4.3",
     "bumpp": "^10.0.3",
-    "eslint": "^9.20.0",
+    "eslint": "^9.20.1",
     "eslint-typegen": "^1.0.0",
     "importx": "^0.5.1",
     "picocolors": "^1.1.1",
