--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sxzz/eslint-config",
   "version": "5.1.1",
-  "packageManager": "pnpm@10.3.0",
+  "packageManager": "pnpm@10.5.2",
   "description": "ESLint config for @sxzz.",
   "type": "module",
   "license": "MIT",
@@ -50,46 +50,46 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.21.0",
     "@eslint/markdown": "^6.2.2",
-    "eslint-config-flat-gitignore": "^2.0.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-antfu": "^3.0.0",
-    "eslint-plugin-command": "^3.0.0",
-    "eslint-plugin-de-morgan": "^1.0.0",
+    "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-antfu": "^3.1.0",
+    "eslint-plugin-command": "^3.1.0",
+    "eslint-plugin-de-morgan": "^1.2.0",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-perfectionist": "^4.8.0",
+    "eslint-plugin-n": "^17.16.1",
+    "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-sxzz": "^0.2.0",
-    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unicorn": "^57.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.32.0",
-    "eslint-plugin-yml": "^1.16.0",
-    "globals": "^15.15.0",
+    "eslint-plugin-yml": "^1.17.0",
+    "globals": "^16.0.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^1.0.0",
-    "prettier": "^3.5.1",
-    "typescript-eslint": "^8.24.0",
+    "local-pkg": "^1.1.0",
+    "prettier": "^3.5.2",
+    "typescript-eslint": "^8.25.0",
     "vue-eslint-parser": "^9.4.3",
-    "yaml-eslint-parser": "^1.2.3"
+    "yaml-eslint-parser": "^1.3.0"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^1.0.0",
+    "@eslint/config-inspector": "^1.0.1",
     "@sxzz/prettier-config": "^2.2.0",
-    "@types/node": "^22.13.2",
-    "@unocss/eslint-plugin": "^66.0.0",
+    "@types/node": "^22.13.8",
+    "@unocss/eslint-plugin": "^66.1.0-beta.3",
     "bumpp": "^10.0.3",
-    "eslint": "^9.20.1",
+    "eslint": "^9.21.0",
     "eslint-typegen": "^2.0.0",
-    "importx": "^0.5.1",
+    "importx": "^0.5.2",
     "picocolors": "^1.1.1",
-    "tsdown": "^0.5.9",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "tsdown": "^0.6.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
