--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jsonc": "^2.19.1",
     "eslint-plugin-n": "^17.16.2",
     "eslint-plugin-perfectionist": "^4.9.0",
+    "eslint-plugin-pnpm": "^0.1.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-sxzz": "^0.2.1",
