--- a/package.json
+++ b/package.json
@@ -49,56 +49,50 @@
     }
   },
   "dependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint/js": "^9.21.0",
-    "@eslint/markdown": "^6.3.0",
-    "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-antfu": "^3.1.1",
-    "eslint-plugin-command": "^3.1.0",
-    "eslint-plugin-de-morgan": "^1.2.0",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.3",
-    "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.16.2",
-    "eslint-plugin-perfectionist": "^4.9.0",
-    "eslint-plugin-pnpm": "^0.1.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-regexp": "^2.7.0",
-    "eslint-plugin-sxzz": "^0.2.1",
-    "eslint-plugin-unicorn": "^57.0.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^9.32.0",
-    "eslint-plugin-yml": "^1.17.0",
-    "globals": "^16.0.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "local-pkg": "^1.1.1",
-    "prettier": "^3.5.3",
-    "typescript-eslint": "^8.26.0",
-    "vue-eslint-parser": "^10.1.1",
-    "yaml-eslint-parser": "^1.3.0"
+    "@eslint-community/eslint-plugin-eslint-comments": "catalog:plugins",
+    "@eslint/js": "catalog:",
+    "@eslint/markdown": "catalog:plugins",
+    "eslint-config-flat-gitignore": "catalog:plugins",
+    "eslint-config-prettier": "catalog:plugins",
+    "eslint-plugin-antfu": "catalog:plugins",
+    "eslint-plugin-command": "catalog:plugins",
+    "eslint-plugin-de-morgan": "catalog:plugins",
+    "eslint-plugin-import-x": "catalog:plugins",
+    "eslint-plugin-jsdoc": "catalog:plugins",
+    "eslint-plugin-jsonc": "catalog:plugins",
+    "eslint-plugin-n": "catalog:plugins",
+    "eslint-plugin-perfectionist": "catalog:plugins",
+    "eslint-plugin-pnpm": "catalog:plugins",
+    "eslint-plugin-prettier": "catalog:plugins",
+    "eslint-plugin-regexp": "catalog:plugins",
+    "eslint-plugin-sxzz": "catalog:plugins",
+    "eslint-plugin-unicorn": "catalog:plugins",
+    "eslint-plugin-unused-imports": "catalog:plugins",
+    "eslint-plugin-vue": "catalog:plugins",
+    "eslint-plugin-yml": "catalog:plugins",
+    "globals": "catalog:",
+    "jsonc-eslint-parser": "catalog:parsers",
+    "local-pkg": "catalog:",
+    "prettier": "catalog:dev",
+    "typescript-eslint": "catalog:plugins",
+    "vue-eslint-parser": "catalog:parsers",
+    "yaml-eslint-parser": "catalog:parsers"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^1.0.2",
-    "@sxzz/prettier-config": "^2.2.1",
-    "@types/node": "^22.13.9",
-    "@unocss/eslint-plugin": "^66.1.0-beta.3",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
-    "eslint-typegen": "^2.0.0",
-    "importx": "^0.5.2",
-    "picocolors": "^1.1.1",
-    "tsdown": "^0.6.4",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "@eslint/config-inspector": "catalog:dev",
+    "@sxzz/prettier-config": "catalog:dev",
+    "@types/node": "catalog:dev",
+    "@unocss/eslint-plugin": "catalog:plugins",
+    "bumpp": "catalog:dev",
+    "eslint": "catalog:",
+    "eslint-typegen": "catalog:dev",
+    "picocolors": "catalog:dev",
+    "tsdown": "catalog:dev",
+    "tsx": "catalog:dev",
+    "typescript": "catalog:dev"
   },
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "is-core-module": "npm:@no-shims/is-core-module"
-    }
   },
   "prettier": "@sxzz/prettier-config"
 }
