chore: switch to ansis

--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "@sxzz/prettier-config": "catalog:dev",
     "@types/node": "catalog:dev",
     "@unocss/eslint-plugin": "catalog:plugins",
+    "ansis": "catalog:dev",
     "bumpp": "catalog:dev",
     "eslint": "catalog:",
     "eslint-typegen": "catalog:dev",
-    "picocolors": "catalog:dev",
     "tsdown": "catalog:dev",
     "tsx": "catalog:dev",
     "typescript": "catalog:dev"
