--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,9 +13,9 @@ catalogs:
     '@eslint/config-inspector': ^1.0.2
     '@sxzz/prettier-config': ^2.2.1
     '@types/node': ^22.13.9
+    ansis: ^3.17.0
     bumpp: ^10.0.3
     eslint-typegen: ^2.0.0
-    picocolors: ^1.1.1
     prettier: ^3.5.3
     tsdown: ^0.6.4
     tsx: ^4.19.3
