--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,8 @@ overrides:
   is-core-module: npm:@no-shims/is-core-module
 
 catalog:
-  '@eslint/js': ^9.25.1
-  eslint: ^9.25.1
+  '@eslint/js': ^9.26.0
+  eslint: ^9.26.0
   eslint-flat-config-utils: ^2.0.1
   globals: ^16.0.0
   local-pkg: ^1.1.1
@@ -13,13 +13,13 @@ catalogs:
   dev:
     '@eslint/config-inspector': ^1.0.2
     '@sxzz/prettier-config': ^2.2.1
-    '@types/node': ^22.15.3
+    '@types/node': ^22.15.14
     ansis: ^3.17.0
     bumpp: ^10.1.0
     eslint-typegen: ^2.1.0
     prettier: ^3.5.3
-    tsdown: ^0.10.0
-    tsx: ^4.19.3
+    tsdown: ^0.11.1
+    tsx: ^4.19.4
     typescript: ^5.8.3
 
   parsers:
@@ -30,7 +30,7 @@ catalogs:
   plugins:
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
     '@eslint/markdown': ^6.4.0
-    '@unocss/eslint-plugin': ^66.1.0-beta.12
+    '@unocss/eslint-plugin': ^66.1.0
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.2
     eslint-plugin-antfu: ^3.1.1
@@ -42,11 +42,11 @@ catalogs:
     eslint-plugin-n: ^17.17.0
     eslint-plugin-perfectionist: ^4.12.3
     eslint-plugin-pnpm: ^0.3.1
-    eslint-plugin-prettier: ^5.2.6
+    eslint-plugin-prettier: ^5.4.0
     eslint-plugin-regexp: ^2.7.0
     eslint-plugin-sxzz: ^0.2.2
-    eslint-plugin-unicorn: ^59.0.0
+    eslint-plugin-unicorn: ^59.0.1
     eslint-plugin-unused-imports: ^4.1.4
-    eslint-plugin-vue: ^10.0.1
+    eslint-plugin-vue: ^10.1.0
     eslint-plugin-yml: ^1.18.0
-    typescript-eslint: ^8.31.1
+    typescript-eslint: ^8.32.0
