ci: publish on CI

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "pnpm run build:typegen && tsdown",
     "build:typegen": "tsx scripts/typegen.ts",
     "build:inspector": "eslint-config-inspector build --config eslint-inspector.config.ts",
-    "lint": "eslint",
+    "test": "echo Skip",
+    "lint": "eslint --max-warnings=0",
     "lint:fix": "pnpm run lint --fix",
     "release": "bumpp && pnpm publish",
     "typecheck": "tsc --noEmit",
