refactor: migrate deprecated `tseslint.config`

--- a/package.json
+++ b/package.json
@@ -97,5 +97,8 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "resolutions": {
+    "@types/eslint": "-"
+  },
   "prettier": "@sxzz/prettier-config"
 }
