--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,8 @@ overrides:
   is-core-module: npm:@no-shims/is-core-module
 
 catalog:
-  '@eslint/js': ^9.37.0
-  eslint: ^9.37.0
+  '@eslint/js': ^9.38.0
+  eslint: ^9.38.0
   eslint-flat-config-utils: ^2.1.4
   globals: ^16.4.0
   local-pkg: ^1.1.2
@@ -13,14 +13,14 @@ catalogs:
   dev:
     '@eslint/config-inspector': ^1.3.0
     '@sxzz/prettier-config': ^2.2.4
-    '@types/node': ^24.6.2
+    '@types/node': ^24.9.2
     bumpp: ^10.3.1
     eslint-typegen: ^2.3.0
     prettier: ^3.6.2
-    rolldown-plugin-require-cjs: ^0.3.0
-    tsdown: ^0.15.6
-    tsx: ^4.20.6
+    rolldown-plugin-require-cjs: ^0.3.1
+    tsdown: ^0.15.12
     typescript: ^5.9.3
+    unrun: ^0.2.1
 
   parsers:
     jsonc-eslint-parser: ^2.4.1
@@ -29,24 +29,24 @@ catalogs:
 
   plugins:
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
-    '@eslint/markdown': ^7.3.0
-    '@unocss/eslint-plugin': ^66.5.2
+    '@eslint/markdown': ^7.5.0
+    '@unocss/eslint-plugin': ^66.5.4
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.1
     eslint-plugin-command: ^3.3.1
     eslint-plugin-de-morgan: ^2.0.0
     eslint-plugin-import-x: ^4.16.1
-    eslint-plugin-jsdoc: ^61.1.1
+    eslint-plugin-jsdoc: ^61.1.11
     eslint-plugin-jsonc: ^2.21.0
     eslint-plugin-n: ^17.23.1
     eslint-plugin-perfectionist: ^4.15.1
-    eslint-plugin-pnpm: ^1.2.0
+    eslint-plugin-pnpm: ^1.3.0
     eslint-plugin-prettier: ^5.5.4
     eslint-plugin-regexp: ^2.10.0
     eslint-plugin-sxzz: ^0.4.1
     eslint-plugin-unicorn: ^62.0.0
-    eslint-plugin-unused-imports: ^4.2.0
-    eslint-plugin-vue: ^10.5.0
+    eslint-plugin-unused-imports: ^4.3.0
+    eslint-plugin-vue: ^10.5.1
     eslint-plugin-yml: ^1.19.0
-    typescript-eslint: ^8.45.0
+    typescript-eslint: ^8.46.2
