chore: upgrade deps

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sxzz/eslint-config",
   "version": "7.2.8",
-  "packageManager": "pnpm@10.20.0",
+  "packageManager": "pnpm@10.21.0",
   "description": "ESLint config for @sxzz.",
   "type": "module",
   "license": "MIT",
@@ -18,11 +18,11 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/index.mjs",
     "./package.json": "./package.json"
   },
   "publishConfig": {
