--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-prettier": "catalog:plugins",
     "eslint-flat-config-utils": "catalog:",
     "eslint-plugin-antfu": "catalog:plugins",
+    "eslint-plugin-baseline-js": "catalog:plugins",
     "eslint-plugin-command": "catalog:plugins",
     "eslint-plugin-de-morgan": "catalog:plugins",
     "eslint-plugin-import-x": "catalog:plugins",
