--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -34,6 +34,7 @@ catalogs:
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.1
+    eslint-plugin-baseline-js: ^0.4.0
     eslint-plugin-command: ^3.3.1
     eslint-plugin-de-morgan: ^2.0.0
     eslint-plugin-import-x: ^4.16.1
