chore: upgrade deps

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,11 +16,11 @@ catalogs:
     '@types/node': ^24.10.1
     bumpp: ^10.3.2
     eslint-typegen: ^2.3.0
-    prettier: ^3.7.1
-    rolldown-plugin-require-cjs: ^0.3.1
-    tsdown: ^0.16.8
+    prettier: ^3.7.3
+    rolldown-plugin-require-cjs: ^0.3.2
+    tsdown: ^0.17.0-beta.5
     typescript: ^5.9.3
-    unrun: ^0.2.13
+    unrun: ^0.2.15
 
   parsers:
     jsonc-eslint-parser: ^2.4.1
@@ -30,7 +30,7 @@ catalogs:
   plugins:
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
     '@eslint/markdown': ^7.5.1
-    '@unocss/eslint-plugin': ^66.5.9
+    '@unocss/eslint-plugin': ^66.5.10
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.1
@@ -50,4 +50,4 @@ catalogs:
     eslint-plugin-unused-imports: ^4.3.0
     eslint-plugin-vue: ^10.6.2
     eslint-plugin-yml: ^1.19.0
-    typescript-eslint: ^8.48.0
+    typescript-eslint: ^8.48.1
