--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalogs:
     '@eslint/config-inspector': ^1.4.2
     '@sxzz/prettier-config': ^2.2.6
     '@types/node': ^24.10.1
+    '@typescript/native-preview': 7.0.0-dev.20251202.1
     bumpp: ^10.3.2
     eslint-typegen: ^2.3.0
     prettier: ^3.7.3
@@ -21,12 +22,10 @@ catalogs:
     tsdown: ^0.17.0-beta.5
     typescript: ^5.9.3
     unrun: ^0.2.15
-
   parsers:
     jsonc-eslint-parser: ^2.4.1
     vue-eslint-parser: ^10.2.0
     yaml-eslint-parser: ^1.3.1
-
   plugins:
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
     '@eslint/markdown': ^7.5.1
