--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -36,7 +36,7 @@ catalogs:
     eslint-plugin-baseline-js: ^0.4.2
     eslint-plugin-command: ^3.3.1
     eslint-plugin-de-morgan: ^2.0.0
-    eslint-plugin-import-x: ^4.16.1
+    eslint-plugin-importer: ^0.1.0
     eslint-plugin-jsdoc: ^61.4.1
     eslint-plugin-jsonc: ^2.21.0
     eslint-plugin-n: ^17.23.1
