--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,8 @@ overrides:
   is-core-module: npm:@no-shims/is-core-module
 
 catalog:
-  '@eslint/js': ^9.39.1
-  eslint: ^9.39.1
+  '@eslint/js': ^9.39.2
+  eslint: ^9.39.2
   eslint-flat-config-utils: ^2.1.4
   globals: ^16.5.0
   local-pkg: ^1.1.2
@@ -13,19 +13,19 @@ catalogs:
   dev:
     '@eslint/config-inspector': ^1.4.2
     '@sxzz/prettier-config': ^2.2.6
-    '@types/node': ^24.10.1
-    '@typescript/native-preview': 7.0.0-dev.20251202.1
+    '@types/node': ^25.0.3
+    '@typescript/native-preview': 7.0.0-dev.20251221.1
     bumpp: ^10.3.2
     eslint-typegen: ^2.3.0
-    prettier: ^3.7.3
-    rolldown-plugin-require-cjs: ^0.3.2
-    tsdown: ^0.17.0-beta.5
+    prettier: ^3.7.4
+    rolldown-plugin-require-cjs: ^0.3.3
+    tsdown: ^0.18.2
     typescript: ^5.9.3
-    unrun: ^0.2.15
+    unrun: ^0.2.20
   parsers:
-    jsonc-eslint-parser: ^2.4.1
+    jsonc-eslint-parser: ^2.4.2
     vue-eslint-parser: ^10.2.0
-    yaml-eslint-parser: ^1.3.1
+    yaml-eslint-parser: ^1.3.2
   plugins:
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
     '@eslint/markdown': ^7.5.1
@@ -34,19 +34,22 @@ catalogs:
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.1
     eslint-plugin-baseline-js: ^0.4.2
-    eslint-plugin-command: ^3.3.1
+    eslint-plugin-command: ^3.4.0
     eslint-plugin-de-morgan: ^2.0.0
-    eslint-plugin-importer: ^0.2.0
-    eslint-plugin-jsdoc: ^61.4.1
+    eslint-plugin-importer: ^0.2.1
+    eslint-plugin-jsdoc: ^61.5.0
     eslint-plugin-jsonc: ^2.21.0
     eslint-plugin-n: ^17.23.1
     eslint-plugin-perfectionist: ^5.0.0
-    eslint-plugin-pnpm: ^1.3.0
+    eslint-plugin-pnpm: ^1.4.3
     eslint-plugin-prettier: ^5.5.4
     eslint-plugin-regexp: ^2.10.0
-    eslint-plugin-sxzz: ^0.4.1
+    eslint-plugin-sxzz: ^0.4.2
     eslint-plugin-unicorn: ^62.0.0
     eslint-plugin-unused-imports: ^4.3.0
     eslint-plugin-vue: ^10.6.2
-    eslint-plugin-yml: ^1.19.0
-    typescript-eslint: ^8.48.1
+    eslint-plugin-yml: ^1.19.1
+    typescript-eslint: ^8.50.0
+
+allowBuilds:
+  esbuild: false
