--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,28 +8,28 @@ catalog:
   eslint-flat-config-utils: ^2.1.4
   globals: ^17.0.0
   local-pkg: ^1.1.2
+  tsdown-preset-sxzz: ^0.3.0
 
 catalogs:
   dev:
     '@eslint/config-inspector': ^1.4.2
     '@sxzz/prettier-config': ^2.2.6
-    '@types/node': ^25.0.6
-    '@typescript/native-preview': 7.0.0-dev.20260112.1
-    bumpp: ^10.3.2
+    '@types/node': ^25.0.9
+    '@typescript/native-preview': 7.0.0-dev.20260118.1
+    bumpp: ^10.4.0
     eslint-typegen: ^2.3.0
-    prettier: ^3.7.4
+    prettier: ^3.8.0
     rolldown-plugin-require-cjs: ^0.3.3
-    tsdown: ^0.19.0
+    tsdown: ^0.20.0-beta.3
     typescript: ^5.9.3
-    unrun: ^0.2.24
+    unrun: ^0.2.25
   parsers:
     jsonc-eslint-parser: ^2.4.2
     vue-eslint-parser: ^10.2.0
-    yaml-eslint-parser: ^1.3.2
   plugins:
-    '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
+    '@eslint-community/eslint-plugin-eslint-comments': ^4.6.0
     '@eslint/markdown': ^7.5.1
-    '@unocss/eslint-plugin': ^66.5.12
+    '@unocss/eslint-plugin': ^66.6.0
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.3
@@ -37,19 +37,19 @@ catalogs:
     eslint-plugin-command: ^3.4.0
     eslint-plugin-de-morgan: ^2.0.0
     eslint-plugin-importer: ^0.2.1
-    eslint-plugin-jsdoc: ^62.0.0
+    eslint-plugin-jsdoc: ^62.1.0
     eslint-plugin-jsonc: ^2.21.0
-    eslint-plugin-n: ^17.23.1
+    eslint-plugin-n: ^17.23.2
     eslint-plugin-perfectionist: ^5.3.1
     eslint-plugin-pnpm: ^1.4.3
-    eslint-plugin-prettier: ^5.5.4
+    eslint-plugin-prettier: ^5.5.5
     eslint-plugin-regexp: ^2.10.0
     eslint-plugin-sxzz: ^0.4.2
     eslint-plugin-unicorn: ^62.0.0
     eslint-plugin-unused-imports: ^4.3.0
-    eslint-plugin-vue: ^10.6.2
-    eslint-plugin-yml: ^1.19.1
-    typescript-eslint: ^8.52.0
+    eslint-plugin-vue: ^10.7.0
+    eslint-plugin-yml: ^3.0.0
+    typescript-eslint: ^8.53.0
 
 allowBuilds:
   esbuild: false
