--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -33,6 +33,7 @@ catalogs:
     eslint-config-flat-gitignore: ^2.1.0
     eslint-config-prettier: ^10.1.8
     eslint-plugin-antfu: ^3.1.3
+    eslint-plugin-astro: ^1.5.0
     eslint-plugin-baseline-js: ^0.4.2
     eslint-plugin-command: ^3.4.0
     eslint-plugin-de-morgan: ^2.0.0
