--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "peerDependencies": {
     "@unocss/eslint-plugin": ">=65.0.0",
     "eslint": "^9.5.0",
-    "eslint-plugin-astro": ">=1.0.0"
+    "eslint-plugin-astro": "^1.5.0"
   },
   "peerDependenciesMeta": {
     "@unocss/eslint-plugin": {
