--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "peerDependencies": {
     "@unocss/eslint-plugin": ">=65.0.0",
-    "eslint": "^9.5.0",
+    "eslint": "^9.5.0 || ^10.0.0",
     "eslint-plugin-astro": "^1.5.0"
   },
   "peerDependenciesMeta": {
